--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,17 +8,17 @@ dependencies {
 
 sourceCompatibility = "8"
 targetCompatibility = "8"
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
-}
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//    }
+//}
+//repositories {
+//    mavenCentral()
+//}
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
