--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+/lib/src/main/java/com/zaozaofan/lib.jar
+/lib/src/main/java/com/zaozaofan/lib/Person.jar
